[package]
name = "axon-jobs"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
description = "Axon async job runtime: SQLite-backed enqueue/query/store/cancel + in-process worker lanes (crawl/embed/extract/ingest/watch)"
license = "MIT"

[dependencies]
axon-core = { path = "../axon-core" }
axon-api = { path = "../axon-api" }
axon-crawl = { path = "../axon-crawl" }
axon-vector = { path = "../axon-vector" }
axon-ingest = { path = "../axon-ingest" }
axon-extract = { path = "../axon-extract" }
anyhow = "1"
async-trait = "0.1"
flate2 = "1"
tar = "0.4"
zip = "3"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
comfy-table = "7"
console = "0.16"
dialoguer = "0.12"
indicatif = "0.18"
supports-hyperlinks = "3"
moka = { version = "0.12", features = ["future"] }
notify = "8"
octocrab = "0.49"
psl = "2"
percent-encoding = "2"
pulldown-cmark = "0.13"
futures-util = "0.3"
futures = "0.3"
reqwest = { version = "0.13", features = ["json", "rustls", "stream", "form"] }
rustls = { version = "0.23", features = ["aws-lc-rs"], default-features = false }
rand = "0.10"
rand_core = { version = "0.9", features = ["os_rng", "std"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
spider = { version = "2", default-features = false, features = [
  "basic",
  "chrome",
  "regex",
  "sitemap",
  "adblock",
  "chrome_stealth",
  "chrome_screenshot",
  "chrome_store_page",
  "chrome_headless_new",
  "chrome_simd",
  "simd",
  "inline-more",
  "cache_mem",
  "ua_generator",
  "headers",
  "time",
  "control",
  "hedge",
  "etag_cache",
  "warc",
] }
spider_agent = { version = "2.47.89", default-features = false, features = [
  "search_tavily",
  "openai",
] }
spider_transformations = "2"
ssh2-config = "0.7.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
streaming-iterator = "0.1"
subtle = "2"
text-splitter = { version = "0.30", features = ["markdown"] }
tree-sitter = "0.26.9"
tree-sitter-bash = "0.25"
tree-sitter-go = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-json = "0.24"
tree-sitter-language = "0.1"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-typescript = "0.23"
tree-sitter-yaml = "0.7"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "io-util",
  "net",
  "process",
  "signal",
  "sync",
  "time",
] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
toml = { version = "1.1", default-features = false, features = ["parse", "serde"] }
toml_edit = "0.25.11"
tokio-util = { version = "0.7", features = ["compat", "io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum", "debug-embed"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
regex = "1"
similar = "2"
scraper = "0.22"
once_cell = "1"
sha2 = "0.11"
hex = "0.4"
reflink-copy = "0.1"
dotenvy = "0.15"
feed-rs = "2"
rmcp = { version = "1.7.0", features = [
  "server",
  "macros",
  "transport-io",
  "transport-streamable-http-server",
  "schemars",
  "elicitation",
] }
lab-auth = { git = "https://github.com/jmagar/lab.git", rev = "87cec3241f9baef22335de9cc8629ebbcd8ba047", package = "lab-auth" }
url = "2"
html5gum = "0.8"
libc = "0.2"
mime_guess = "2"
rust-embed = "8"

[lints.rust]
unsafe_code = "deny"
unused_import_braces = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
module_inception = "allow"              # src/crawl.rs: acceptable module name
[features]
test-util = []

[dev-dependencies]
axon-core = { path = "../axon-core", features = ["test-util"] }
httpmock = "0.8"
serial_test = "3"
proptest = "1"
