[package]
name = "axon-ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
axon-api = { path = "../axon-api" }
axon-error = { path = "../axon-error" }
tokio = { version = "1", features = ["macros", "rt", "sync"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
