[package]
name = "axon-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
axon-api = { path = "../axon-api" }
axon-core = { path = "../axon-core" }
axon-error = { path = "../axon-error" }
axon-observe = { path = "../axon-observe" }
dashmap = "6"
futures-util = "0.3"
libc = "0.2"
reqwest = { version = "0.13", features = ["json", "rustls", "stream", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
  "process",
  "time",
  "io-util",
  "fs",
] }

[dev-dependencies]
axon-core = { path = "../axon-core", features = ["test-util"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
httpmock = "0.8"
toml = { version = "1.1", default-features = false, features = ["parse", "serde"] }
