[package]
name = "axon-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
axon-api = { path = "../axon-api" }
axon-embedding = { path = "../axon-embedding" }
axon-error = { path = "../axon-error" }
axon-vectors = { path = "../axon-vectors" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
axon-adapters = { path = "../axon-adapters" }
axon-retrieval = { path = "../axon-retrieval" }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
