[package]
name = "axon-observe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axon-api = { path = "../axon-api" }
axon-error = { path = "../axon-error" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
