[package]
name = "axon-observe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
axon-api = { path = "../axon-api" }
axon-core = { path = "../axon-core" }
axon-error = { path = "../axon-error" }
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
metrics = "0.24"
schemars = { version = "1", features = ["chrono04", "uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tempfile = "3"
