[package]
name = "axon-parse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axon-api = { path = "../axon-api" }
chrono = { version = "0.4", features = ["clock"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }

[dev-dependencies]
axon-graph = { path = "../axon-graph" }
