[package]
name = "axon-parse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axon-api = { path = "../axon-api" }
chrono = { version = "0.4", features = ["clock"] }
serde_json = "1"
serde_yaml = "0.9"
tree-sitter = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
url = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }

[dev-dependencies]
axon-graph = { path = "../axon-graph" }
