[package]
name = "axon-retrieval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axon-api = { path = "../axon-api" }
axon-embedding = { path = "../axon-embedding" }
axon-error = { path = "../axon-error" }
axon-vectors = { path = "../axon-vectors" }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
