[package]
name = "axon-retrieval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
axon-api = { path = "../axon-api" }
axon-embedding = { path = "../axon-embedding" }
axon-error = { path = "../axon-error" }
axon-vectors = { path = "../axon-vectors" }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
