[package]
name = "axon-route"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
axon-api = { path = "../axon-api" }
axon-error = { path = "../axon-error" }
hex = "0.4"
serde_json = "1"
sha2 = "0.11"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
