[package]
name = "axon-vector"
version.workspace = true
edition = "2024"
rust-version = "1.94.0"
description = "Axon vector store: TEI embedding, Qdrant upsert/search/hybrid-RRF, chunking, ranking, RAG retrieval"
license = "MIT"

[dependencies]
axon-core = { path = "../axon-core" }
axon-api = { path = "../axon-api" }
axon-source-ledger = { path = "../axon-source-ledger" }
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
moka = { version = "0.12", features = ["future"] }
pulldown-cmark = "0.13"
futures-util = "0.3"
reqwest = { version = "0.13", features = ["json", "rustls", "stream", "form"] }
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
spider = { version = "2", default-features = false, features = [
  "basic",
  "chrome",
  "regex",
  "sitemap",
  "adblock",
  "chrome_stealth",
  "chrome_screenshot",
  "chrome_store_page",
  "chrome_headless_new",
  "chrome_simd",
  "simd",
  "inline-more",
  "cache_mem",
  "ua_generator",
  "headers",
  "time",
  "control",
  "hedge",
  "etag_cache",
  "warc",
] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
streaming-iterator = "0.1"
text-splitter = { version = "0.30", features = ["markdown"] }
tree-sitter = "0.26.9"
tree-sitter-bash = "0.25"
tree-sitter-go = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-json = "0.24"
tree-sitter-language = "0.1"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-typescript = "0.23"
tree-sitter-yaml = "0.7"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "io-util",
  "net",
  "process",
  "signal",
  "sync",
  "time",
] }
toml = { version = "1.1", default-features = false, features = ["parse", "serde"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
regex = "1"
url = "2"

[lints.rust]
unsafe_code = "deny"
unused_import_braces = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
module_inception = "allow"              # src/crawl.rs: acceptable module name

[features]
test-util = []
live-qdrant = []
test-helpers = []

[dev-dependencies]
axon-core = { path = "../axon-core", features = ["test-util"] }
httpmock = "0.8"
serial_test = "3"
proptest = "1"
