[package]
name = "axon-vectors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
axon-api = { path = "../axon-api" }
axon-error = { path = "../axon-error" }
qdrant-client = { version = "1.18.0", default-features = false, features = ["serde"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }

[dev-dependencies]
